@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 15;
+use Test::More tests => 17;
 
 use Test::XML;
 
@@ -35,9 +35,10 @@ my @tests = (qw(
     with-ul-ol-li
     with-blockquote
     with-programlisting
+    paras-with-entities-at-start-of-line
     ));
 
-# TEST:$num_texts=7
+# TEST:$num_texts=8
 
 my $grammar = XML::Grammar::Fiction::FromProto->new({
         parser_class => "XML::Grammar::Fiction::FromProto::Parser::QnD",
